--- a/springapp.yml
+++ b/springapp.yml
@@ -19,7 +19,7 @@ spec:
     spec:
       containers:
       - name: springappcontainer
-        image: mylandmarktech/spring-boot-mongo
+        image: moladipos/mymain1:latest
         ports:
         - containerPort: 8080
         env:
